For legacy interface names (eth0)
Required so that interface is brought up at boot (thanks to
/etc/network/interfaces.d/eth0).

--- a/includes.binary/boot/isolinux/isolinux.cfg
+++ b/includes.binary/boot/isolinux/isolinux.cfg
@@ -2,7 +2,7 @@ default boot2kameleon
 label boot2kameleon
         kernel /live/vmlinuz
         initrd /live/initrd.img
-        append loglevel=3 username=root console=ttyS0 console=tty0 boot=live config noprompt noeject nomodeset norestore live-getty divider=10 nmi_watchdog=0
+        append loglevel=3 username=root console=ttyS0 console=tty0 boot=live config noprompt noeject nomodeset norestore live-getty divider=10 nmi_watchdog=0 net.ifnames=0 biosdevname=0
 
 implicit 0
 prompt 1
